Tue Jul 12 14:07:46 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* signal.c (install_sighandler): fixed a race.

Tue Jul 12 13:49:32 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* signal.c (sig_trap): don't permit to change a signal handler which
	  the interpreter reserved.
	* signal.c (reserved_signal_p): ditto.
	  [Bug #2616] [ruby-core:27625]

	* test/ruby/test_signal.rb (TestSignal#test_reserved_signal):
	  added a test for reserved signal.

Tue Jul 12 11:58:28 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/setup.mak: support x86-amd64 cross compile environment.

Mon Jul 11 23:22:28 2011  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* time.c: can't compile time.c on AIX due to missing declaration for
	  ffs(). It is declared in strings.h on AIX.

Mon Jul 11 15:54:24 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* process.c: removed signal() macro. It's no longer used.

Mon Jul 11 15:02:24 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* numeric.c (rb_num2ull): use FIX2LONG instead of FIX2ULONG. see
	  rb_num2ulong(). fixed the problem of ObjectSpace._id2ref of IL32LLP64
	  platforms, introduced at r32433.

Mon Jul 11 05:38:05 2011  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* thread_pthread.c (get_stack): need to adjust stack addr for
	  [Bug #1813] on AIX.

Mon Jul 11 01:16:27 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (rb_thread_create_timer_thread): removed
	  rb_disable_interrupt()/rb_enable_interrupt().
	* vm_core.h: ditto.
	* process.c (static void before_exec): ditto.
	* process.c (static void after_exec): ditto.
	  [Bug #4765] [ruby-dev:43571]

	* eval_intern.h: removed rb_trap_restore_mask().
	* vm_eval.c (rb_throw_obj): ditto.
	* eval.c (setup_exception): ditto.

	* signal.c: removed trap_last_mask.
	* signal.c (trap_restore_mask): removed.
	* signal.c (init_sigchld): comment clarification why signal block
	  is needed. and removed trap_last_mask operation.